Fixed caption preventing video playback on mobile

--- a/client/layout/components/_video.scss
+++ b/client/layout/components/_video.scss
@@ -31,6 +31,8 @@
 .video_player-decoration {
     @include center;
     position: absolute;
+    /* allow passthrough on mouse events to enable video playback on mobile */
+    pointer-events: none;
 }
 
 .video_bottom {
